@@ -1,9 +1,10 @@
 package com.example.backend.config;
 
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.Arrays;
-import org.springframework.beans.factory.annotation.Value;
 
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
@@ -20,51 +21,49 @@ public class SecurityConfig {
 
     @Value("${frontend.url}")
     private String FRONTEND_URL;
-    
+
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
             .cors(cors -> cors.configurationSource(corsConfigurationSource()))
             .csrf(csrf -> csrf.disable())
-           .authorizeHttpRequests(auth -> auth
-    .requestMatchers(
-        "/error",
-        "/oauth2/**",
-        "/addvendor", // allow unauthenticated POSTs to this
-        "/login"
-    ).permitAll()
-    .anyRequest().authenticated()
-)
-
+            .authorizeHttpRequests(auth -> auth
+                .requestMatchers(
+                    "/error",
+                    "/oauth2/**",
+                    "/addvendor",
+                    "/login"
+                ).permitAll()
+                .anyRequest().authenticated()
+            )
             .oauth2Login(oauth2 -> oauth2
                 .loginPage("/login")
                 .successHandler((request, response, authentication) -> {
                     OAuth2User oauth2User = (OAuth2User) authentication.getPrincipal();
-                    // Get user information from OAuth2User
+
                     String email = oauth2User.getAttribute("email");
                     String name = oauth2User.getAttribute("name");
                     String picture = oauth2User.getAttribute("picture");
-                    
-                    
-                    // Generate a token (you might want to use JWT here)
-                    String token = email; // Using email as token for now
-                    
-                    // Build the redirect URL with all user information
+
+                    String token = email; // Placeholder for token, consider using JWT
+
                     String redirectUrl = String.format("%s/auth/callback?token=%s&name=%s&email=%s&picture=%s",
                         FRONTEND_URL,
                         token,
-                        name != null ? URLEncoder.encode(name, "UTF-8") : "",
-                        email != null ? URLEncoder.encode(email, "UTF-8") : "",
-                        picture != null ? URLEncoder.encode(picture, "UTF-8") : ""
+                        name != null ? URLEncoder.encode(name, StandardCharsets.UTF_8) : "",
+                        email != null ? URLEncoder.encode(email, StandardCharsets.UTF_8) : "",
+                        picture != null ? URLEncoder.encode(picture, StandardCharsets.UTF_8) : ""
                     );
-                    
-                    // Redirect to frontend with all user data
+
                     response.sendRedirect(redirectUrl);
                 })
             )
             .logout(logout -> logout
-                .logoutSuccessUrl(FRONTEND_URL + "/login")
+                .logoutSuccessHandler((request, response, authentication) -> {
+                    response.sendRedirect(FRONTEND_URL + "/login");
+                })
             );
+
         return http.build();
     }
 
@@ -75,7 +74,7 @@ public class SecurityConfig {
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
         configuration.setAllowedHeaders(Arrays.asList("*"));
         configuration.setAllowCredentials(true);
-        
+
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
